# cpp-debugio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile-gmake.mk  Makefile-nmake.mk  Makefile.gmake  Makefile.nmake  README.md  debugio.h
example/: CMakeLists.txt  dcat.cpp  dtime.cpp  helper.h  reader.cpp  writer.cpp
include/: debugio.h
include/ipc/posix/: event.h  semaphore.h  shared_memory.h
include/ipc/win32/: event.h  shared_memory.h
linux/: debugio_impl.cpp  debugio_impl.h  shared_condition.h  shared_memory.h  shared_mutex.h
windows/: debugio_impl.cpp  debugio_impl.h  reader.cpp  shared_event.h  shared_memory.h  writer.cpp
